--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		}
 	</script>
 
+	<style>
+		button {border-radius:30px; width:180px; margin:5px;}	
+	</style>
 </head>
 <body>
 <center>
@@ -43,6 +46,7 @@
 		Teszt login<br /><img src="./images/guest.jpg" width="35" />
 		<br />Látogató
 	</button>
+	<strong>DEMO változat, a modosításokat nem tárolja.</strong>
 </p>
 <iframe src="" id="ifrm" width="1240" height="850"></iframe>
 </center>
